# michael-denyer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: commit-cafe.yml  snake.yml
src/commit_cafe/: __init__.py  choreography.py  cli.py  collect.py  palette.py  render.py  sprites.py  state.py
tests/: conftest.py  test_choreography.py  test_cli.py  test_collect.py  test_palette.py  test_render.py  test_sprites.py  test_state.py
tests/fixtures/: cafe_state_busy.json
