[project]
name = "commit-cafe"
version = "0.1.0"
description = "Animated cat-cafe SVG renderer for the GitHub profile README"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "loguru>=0.7",
    "defusedxml>=0.7",
]

[project.scripts]
commit-cafe = "commit_cafe.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commit_cafe"]

[tool.pytest.ini_options]
addopts = "-n 3 --timeout=30 --cov=commit_cafe --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
